--- a/Learn_Identity_App.csproj
+++ b/Learn_Identity_App.csproj
@@ -21,6 +21,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="6.0.16" />
     <PackageReference Include="SendGrid" Version="9.28.1" />
+    <PackageReference Include="Syncfusion.EJ2.AspNet.Core" Version="21.2.10" />
   </ItemGroup>
 
 </Project>
